<resources>
    <string name="app_name">Inure Unlocker</string>
    <string name="unlocker_desc">Thank you for your contribution. Click on the \"Activate\" button to unlock the full features of Inure.</string>
    <string name="activate">Activate</string>
    <string name="app_not_installed">App not installed!</string>
    <string name="rate_me">Rate Inure</string>
    <string name="menu">Menu</string>
    <string name="hide_app">Hide App</string>
    <string name="show_app">Show App</string>
</resources>